fixed spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.glass{
+    backdrop-filter: blur(9px) saturate(79%);
+    -webkit-backdrop-filter: blur(9px) saturate(79%);
+    background-color: rgba(255, 255, 255, 0.08);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+    padding: 2%;
+    color: #fff;
+}
